--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class=" nav-item">
+                            <a class=" nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      </li>
+                      <li class=" nav-item">
                         <a class=" nav-link active" aria-current="page" href="pages/nosotros.html">Nosotros</a>
                       </li>
                       <li class=" nav-item">
