--- a/pages/shop.html
+++ b/pages/shop.html
@@ -258,6 +258,7 @@
  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
  <script> AOS.init();</script>
 
+   <!--script JS-->
  <script src="../main.js"></script>
 
 </body>
